# open-exam-backend

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  sonar-project.properties  workflows.sh
.github/: gin-ci-paths  gin-template.yaml  grpc-ci-paths  grpc-template.yaml  rust-ci-paths  rust-template.yaml
.github/workflows/: container-build-service.yaml  email-service.yaml  exam-db-service.yaml  exam-orchestrator.yaml  format.yaml  fs-service.yaml  oauth2.yaml  plugin-db-service.yaml  public-api.yaml  rbac-service.yaml  relation-service.yaml  reviewdog.yaml  sonar.yaml  user-db-service.yaml
answer-service/grpc-answer-service/: answer-service.proto
container-build-service/grpc-container-build-service/: container-build-service.proto
container-build-service/src/: main.go  service.go
dev/docker-dev-env/: cluster-config.conf  docker-compose.yaml  redis-net.sh  up.sh
dev/keys/: jwt_private.pem  jwt_public.pem
dev/redis/: cluster-config.conf  docker-compose.yaml  up.sh
dev/scripts/: gen-pass.go  gen-proto-db.sh  proto.go  up.sql
email-service/grpc-email-service/: email-service.proto
email-service/src/: main.go  service.go
exam-client-access-service/src/: main.go  service.go
exam-orchestrator/: Cargo.toml  data-flow.md
exam-orchestrator/src/: client_handler.rs  main.rs
fs-service/: .dev.env  file-structure.md
grpc-shared/: shared.proto
oauth2/: .dev.env
scripts/: up.sql
shared/: plugin.go  shared-structs.go  shared.go
shared-rs/: Cargo.toml
user-db-service/: .dev.env  Dockerfile
user-service/: Dockerfile
util/: util.go
(+39 files in other folders)
